 cnp-mitre-t1552-block-cloud-instance-metadata-access-from-pods-s1c15ci.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "cnp-mitre-t1552-block-cloud-instance-metadata-access-from-pods"-n5b90j4
  namespace: default
spec:
  description: "The policy will block access to cloud metadata ips from containers"
  endpointSelector:
    matchLabels:
      app: jupyterhub
      component: continuous-image-puller
      controller-revision-hash: 56bc99b8f5
      pod-template-generation: 1
      release: jupyter-hub
  egress:
  - toCIDRSet:
    - cidr: 0.0.0.0/0
      except:
      - 169.254.169.254/32
      - 169.254.170.2/32
